k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: homework-service
  template:
    metadata:
      labels:
        app: homework-service
    spec:
      containers:
      - name: homework-container
        image: mxbooll/homework_2m_9l:latest
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 10
          timeoutSeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 10
          timeoutSeconds: 5
          periodSeconds: 10
