k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework-service
spec:
  selector:
    app: homework-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
