k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework-ingress  
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /health
        pathType: Exact
        backend:
          service:
            name: homework-service
            port:
              number: 80
